[package]
name = "spritepack"
description = "CLI spritesheet generator for Roblox workflows (Asphalt-friendly)"
license = "MIT"
version = "1.0.2"
edition = "2021"

[lib]
name = "spritepack"
path = "src/lib.rs"

[[bin]]
name = "spritepack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
env_logger = { version = "0.11", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
inquire = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
